--- a/style.css
+++ b/style.css
@@ -92,5 +92,14 @@ button:hover {
 
 }
 
+.scroll-object {
+  color: wheat;
+  font-family: Roboto;
+  font-size: 16px;
+  padding: 10px;
+
+}
+
+
 
 
